2020-12-16  Tadeu Zagallo  <tzagallo@apple.com>

        propertyNameEnumerator must check it can still take the fast path after getGenericPropertyNames
        https://bugs.webkit.org/show_bug.cgi?id=219957
        <rdar://71156284>

        Reviewed by Yusuke Suzuki.

        We need to check if we still `canAccessPropertiesQuicklyForEnumeration` on
        `structureAfterGettingPropertyNames`, since we might call out out to a proxy's
        `getPrototypeOf` callback through `getGenericPropertyNames`.

        * runtime/JSPropertyNameEnumerator.h:
        (JSC::propertyNameEnumerator):

2019-01-15  Saam Barati  <sbarati@apple.com>

        Try ripping out inferred types because it might be a performance improvement
        https://bugs.webkit.org/show_bug.cgi?id=190906
        
        Reviewed by Yusuke Suzuki.
        
        This patch removes inferred types from JSC. Initial evidence shows that
        this might be around a ~1% speedup on Speedometer2 and JetStream2.
        
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * Sources.txt:
        * bytecode/AccessCase.cpp:
        (JSC::AccessCase::generateImpl):
        * bytecode/Fits.h:
        * bytecode/PutByIdFlags.cpp:
        (WTF::printInternal):
        * bytecode/PutByIdFlags.h:
        * bytecode/PutByIdStatus.cpp:
        (JSC::PutByIdStatus::computeFromLLInt):
        (JSC::PutByIdStatus::computeForStubInfo):
        (JSC::PutByIdStatus::computeFor):
        * bytecode/PutByIdVariant.cpp:
        (JSC::PutByIdVariant::operator=):
        (JSC::PutByIdVariant::replace):
        (JSC::PutByIdVariant::transition):
        (JSC::PutByIdVariant::setter):
        (JSC::PutByIdVariant::attemptToMerge):
        (JSC::PutByIdVariant::dumpInContext const):
        * bytecode/PutByIdVariant.h:
        (JSC::PutByIdVariant::requiredType const): Deleted.
        * dfg/DFGAbstractInterpreterInlines.h:
        (JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):