@@ -1,3 +1,15 @@
+2021-01-15  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Clean up DFGPreciseLocalClobberize to avoid duplicate code
+        https://bugs.webkit.org/show_bug.cgi?id=220670
+
+        Reviewed by Filip Pizlo.
+
+        This patch cleans up DFGPreciseLocalClobberize by extracting code to lambda to remove duplicate code.
+
+        * dfg/DFGPreciseLocalClobberize.h:
+        (JSC::DFG::PreciseLocalClobberizeAdaptor::readTop):
+
 2020-12-16  Tadeu Zagallo  <tzagallo@apple.com>
 
         propertyNameEnumerator must check it can still take the fast path after getGenericPropertyNames
